feat: подтягивание изменений и добавление service gui тестов